--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
         </dependency>
         <dependency>
             <groupId>org.dkpro.core</groupId>
-            <artifactId>dkpro-core-api-io-asl</artifactId>
+            <artifactId>dkpro-core-io-conll-asl</artifactId>
         </dependency>
         <dependency>
             <groupId>org.dkpro.statistics</groupId>
